add description for code

--- a/0.5_ViT_liveness-classifier.ipynb
+++ b/0.5_ViT_liveness-classifier.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This guide helps you install the [PyTorch-Encoding](https://github.com/zhanghang1989/PyTorch-Encoding) library while fixing a known compatibility issue with newer versions of PyTorch (where `.data<T>()` is deprecated)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -32,6 +39,13 @@
     "\n",
     "# Step 4: Build the extension in-place\n",
     "!python setup.py build_ext --inplace"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Install and import packages"
    ]
   },
   {
@@ -78,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-08T02:09:03.253284Z",
@@ -103,7 +117,7 @@
     "import torchvision.transforms as transforms\n",
     "import torch.optim as optim\n",
     "import os\n",
-    "os.environ['TORCH_CUDA_ARCH_LIST'] = '6.0' #  Consider change that if you have GPU diff P100\n",
+    "os.environ['TORCH_CUDA_ARCH_LIST'] = '6.0' #  Change that if you have GPU diff P100\n",
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -136,6 +150,13 @@
    "metadata": {},
    "source": [
     "# 1. Load & Pre-process the Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This code defines a custom PyTorch dataset for binary face anti-spoofing. It loads images from normal and spoof folders, assigns labels, applies transforms, and returns image–label pairs. The load_data function creates a DataLoader for batching."
    ]
   },
   {
@@ -192,6 +213,13 @@
    "metadata": {},
    "source": [
     "# 2. Custom Model for Binary Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Both the Visual Model and Texture Model are used in their pretrained form with all parameters frozen. Only the final classification layers, which have been modified to fit the binary liveness task, are trained during the learning process."
    ]
   },
   {
@@ -335,8 +363,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Train and Validate model, after training, key metrics and loss values are recorded and visualized as images for easier analysis."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2025-04-08T02:17:37.115254Z",
@@ -349,7 +384,7 @@
    },
    "outputs": [],
    "source": [
-    "# Validate model and calculate loss for per batch\n",
+    "# Validate model and calculate loss\n",
     "def validate_model(dev_dataloader, classify_model, texture_model, criterion, device, alpha):\n",
     "    classify_model.eval()\n",
     "    texture_model.eval()\n",
@@ -365,7 +400,7 @@
     "    loss_val = total_loss / len(dev_dataloader)\n",
     "    return loss_val\n",
     "\n",
-    "# Training model per epoch and calculate loss for per batch\n",
+    "# Training model per epoch and calculate loss\n",
     "def train_per_epoch(classify_model, texture_model, train_dataloader, criterion, classify_optimizer, texture_optimizer, device, epoch, num_epochs, alpha):\n",
     "    classify_model.train()\n",
     "    texture_model.train()\n",
@@ -406,7 +441,7 @@
     "    plt.savefig(os.path.join(folder_ckpt, f\"{alpha}_{model_name}_train_val_loss.png\"), dpi=300, bbox_inches=\"tight\")\n",
     "    plt.close()\n",
     "\n",
-    "# Load model and setting layer to fine-tuning\n",
+    "# Load Visual Model\n",
     "def get_model(model_name):\n",
     "    models = {\n",
     "        \"ResNet50\": CustomResNet50,\n",
@@ -422,9 +457,9 @@
     "def print_training_infor(model_name, num_epochs, lr, batch_size, alpha):\n",
     "    print(60 * \"-\")\n",
     "    if alpha == 1:\n",
-    "        model_info = \"Don't use Texture Model\"\n",
+    "        model_info = \"Don't use Texture Model\" # Only Visual Model\n",
     "    elif alpha == 0:\n",
-    "        model_info = \"Don't use Classification Model\"\n",
+    "        model_info = \"Don't use Classification Model\" # Only Texture Model\n",
     "    else:\n",
     "        model_info = \"Ensemble Classification and Texture Models\"\n",
     "    \n",
@@ -437,7 +472,7 @@
     "    # Make a folder save checkpoint, image loss, ...\n",
     "    os.makedirs(folder_ckpt, exist_ok=True)\n",
     "\n",
-    "    # Load classify model and texture model\n",
+    "    # Load visual model and texture model\n",
     "    classify_model = get_model(model_name)\n",
     "    texture_model = CustomTextureModel()\n",
     "\n",
